# LucianOS

./: .gitignore  CONTRIBUTING.md  EXECUTIVE-BRIEF.md  LICENSE  LucianOS-Deployment.md  LucianOS-License.txt  OS-README.md  QUICKSTART.md  SETUP-SUMMARY.md  deploy_all.sh  next.config.ts  package-lock.json  package.json  tailwind.config.ts
.github/: CODEOWNERS
.github/workflows/: deploy.yml
ai/: README.md  run_assistant.py
ci/: README.md  packer.json
docs/archived-site/: README.md
image/: README.md  build_rootfs.sh
installer/: README.md
kernel/: README.md  build_kernel.sh
shell/: Cargo.toml  README.md
shell/src/: main.rs
tests/: README.md
